--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- hoja de estilos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <!-- título de página -->
     <title>Título de la página</title>
     <!-- ícono de pàgina -->
     <!-- fuentes -->
     <!-- javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <div class="row main flex">
         <div class="column-1">
-            <p>1</p>
+            <h1>Disfruta de compartir</h1>
+            <p><span>#AppName</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt delectus ab reprehenderit itaque necessitatibus molestiae voluptates dicta dolorum ratione quod minima, accusamus doloremque. Corrupti ea tempora aspernatur
+                doloremque! Debitis, eum?
+            </p>
         </div>
     </div>
+
 </body>
 
 </html>
