--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- hoja de estilos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <!-- título de página -->
     <title>Título de la página</title>
     <!-- ícono de pàgina -->
     <!-- fuentes -->
     <!-- javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/bd2eddefe6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,6 +25,11 @@
             <p><span>#AppName</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt delectus ab reprehenderit itaque necessitatibus molestiae voluptates dicta dolorum ratione quod minima, accusamus doloremque. Corrupti ea tempora aspernatur
                 doloremque! Debitis, eum?
             </p>
+            <button type="button" class="btn btn-primary mt-1"><i class="fa-solid fa-arrow-right-to-bracket"></i>Primary</button>
+            <button type="button" class="btn btn-secondary mt-1"><i class="fa-solid fa-book-open-reader"></i>Secondary</button>
+            <button type="button" class="btn btn-success mt-1"><i class="fa-solid fa-newspaper"></i>Success</button>
+            <button type="button" class="btn btn-danger mt-1"><i class="fa-solid fa-chalkboard-user"></i>Danger</button>
+            <button type="button" class="btn btn-warning mt-1"><i class="fa-solid fa-paper-plane"></i></button>
         </div>
     </div>
 
